app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_selfd
 *= require foundation
 *= require nprogress
 *= require pickadate/default
 *= require pickadate/default.date
 */
 @import "foundation_and_overrides";
 @import 'foundation-icons';

/* PAGE DISPLAY */

body, html {height: 100%;}
div.wrap {height:100%; overflow:hidden;}
ul {list-style-type: none; margin-left: 0;}
table {width: 100%;}

/* COLOR VARIABLES */

$main-color: #1E88E5;
$highlight-color: #FFD54F;
$gray-color: #BDBDBD;
.colorGray {color: black;}
.colorGray {color: #212121;}
.colorBlue {color: #08c;}
.red {background-color: #FF5722;}
.lightRed {background-color: #FF8A65;}
.lighterRed {background-color: #FFCCBC;}

/* SCROLLBAR */

::-webkit-scrollbar {
    width: 5px;
    height: 0px;
    background-color: #EEEEEE;
}

::-webkit-scrollbar-thumb {
    background: $main-color;
}

/* COLOR ASSIGNMENTS */

a i {
  color: white;
}

.expiredItem {
	color: red;
}

.freshItem {
	color: green;
}

.bodyBackgroundColor {
	background-color: #FAFAFA;
}

/* FONT SETTINGS */

.size-48 {
  font-size: 2em;
}

.tableHeader {
  th {
    font-size: .75em;
    white-space: nowrap;
    text-align: center;
  }

}

.noWrap {
  white-space: nowrap;
}

.font80 {
  font-size: 80%;
}

.centerText {
  text-align: center;
}

.warningLabel {
  font-size: 75%;
  color: red;
}

.itemDetails {
  font-size: 1em;
  font-weight: bold;
}

.itemDetailsHeader {
  margin-bottom: 1em;
}

/* HIDDEN */

.hidden {
  display: none;
}

/* CONTAINERS */

.adminContainer {
	width: 100%;
  text-align: center;
}

.itemContainer {
  margin: 2em;
  margin-right: 2em;
  height: 80%;
  font-size: 90%;
}

.listContainer {
  width: 100%;
  height: 80%;
}

.adminControlContainer {
  margin: 1em;
  overflow-y: scroll;
  height: 100%;
  margin-bottom: 2em;
}

.deviseContainer {
  width: 100%;
  text-align: center;
  margin-top: 1em;
}

.field {
  width: 75%;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.lookupContainer {
  margin-left: 10%;
  margin-right: 10%;
  margin-top: 3em;
  text-align: center;
}

/* NAVBAR */

.navbar {
  position: relative;
  height: 3em;
	background-color: $main-color;
}

.notify-alert {
  position: relative;
	color: $highlight-color;
	font-size: 80%;
	text-align: center;
}

.navbar-icon {
  margin-top: .75em;
  margin-left: .75em;
  margin-right: .5em;
  font-size: 1.2em;
}

.navbar-icon-right {
  padding-right: .75em;
}

/* BUTTONS */

.rootButtonRack{
  margin-top: 1em;
}

.mainButton {
  border: 1px solid #BDBDBD;
  color: #424242;
  padding-top: 1em;
  margin-bottom: .75em;
  width: 100%;
  height: 5em;
  float: right;
  font-size: .8em;
  text-align: left;
  padding-left: 2em;
  background-color: white;
  i {
    color: #424242;
  }
}

.button:hover {
  background:  white;
  color: black;
}

.managementButton {
  border: 1px solid #BDBDBD;
  width: 100%;
  height: 2em;
  margin-bottom: 1em;
}

.arrangeReturn {
  margin-top: 6em;
  margin-left:20%;
  margin-right:20%;
  width: 60%;
  background: white;
  border: 1px solid black;
  text-align: center;
  radius: 3px;
}

.shoppingCartButton {
  width: 4em;
  height: 4em;
  border: 1px solid #BDBDBD;
  text-align: center;
  line-height: 4.5em;
  background-color: white;
}

.locateButton {
  width: 4em;
  height: 4em;
  border: 1px solid #BDBDBD;
  margin-left: 1em;
  text-align: center;
  line-height: 4em;
  background-color: white;
}

.trashCartButton {
  position: relative;
  right: 1em;
  width: 4em;
  height: 4em;
  border: 1px solid #BDBDBD;
  text-align: center;
  line-height: 4.5em;
  background-color: white;
}

.commitItemButton {
  margin-top: 1em;
  width: 100%;
  border: 1px solid #BDBDBD;
  box-shadow: 0 2px 0 0 #BDBDBD;
  background-color: white;
  height: 6em;
  line-height: 3em;
  font-size: 1em;
  text-align: center;
  i {
    color: black;
  }
}

.cartNavButton {
  border: 1px solid #BDBDBD;
  color: #424242;
  background-color: white;
  width: 25%;
  height: 3em;
  float:right;
  padding-top: .5em;
  margin: .4em;
  font-size: .8em;
  text-align: center;
  line-height: 2em;
  i {
    color: #424242;
  }
}

.cartItemButton {
  position: relative;
  left: 1em;
  top: 6em;
  border: 1px solid #BDBDBD;
  color: #424242;
  background-color: white;
  width: 27%;
  height: 3em;
  float:right;
  padding-top: .5em;
  font-size: .8em;
  text-align: center;
  line-height: 2em;
  i {
    color: #424242;
  }
}

.listButtons {
	background-color: white;
  border: 1px solid #BDBDBD;
  margin-bottom: .75em;
	width: 100%;
	height: 4em;
	font-size: .8em;
  line-height: 1.5em;
	text-align: left;
  color: #424242;
  i {
    color: red;
  }
}

.adminButtons {
  position: relative;
  border: 1px solid black;
  width: 66%;
  margin-top: 0.5em;
  left: 17%;
  line-height: 2.5em;
  height: 2.5em;
  color: black;
  text-align: left;
  padding-left: 1em;
}


/* TABLES */

.tableCell {
	font-size: 85%;
}

.tableCellButton {
  padding: 1em;
  background-color: white;
  border: 1px solid #BDBDBD;
  color: #424242;
  height: 4em;
  width: 100%;
  font-size: .8em;
  line-height: 2em;
  text-align: center;
  box-shadow: 0 1px 0 0 #BDBDBD;
}

.ingredientUL {
	height: 85%;
  width: 100%;
	overflow-y: scroll;
  overflow-x: hidden;
}

.cartUL {
	height: 100%;
	overflow-y: scroll;
}

.mainUL {
	list-style-type: none;
  margin-top: 1em;
  height: 100%;
	width: 100%;
	overflow-y: scroll;
}

/* Breadcrumbs */

.breadcrumbs {
  white-space:nowrap;
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch;
  padding: 0 10px 0 10px;
  font-size: .9em;
  line-height: 48px;
  a {
    color: #08c;
  }
  > * {
    float: initial;
    font-size: 1em;
      &:before {
        content: "";
        margin: 0;
      }
  }
}

.breadcrumbsUL {
  position: relative;
  color: #616161;
  font-size: 80%;
}

.crumbs {
	font-size: 90%;
	line-height: 2.3em;
  color: #757575;
}


/* ADMIN */

.addSublocation {
  padding: .75em;
  margin-right: 1em;
  text-align: center;
  height: 2.5em;
  line-height: 3em;
  background-color: #81C784;
}

.deleteSublocation {
  margin-left: .25em;
  padding: .75em;
  width: 4em;
  height: 2.8em;
  text-align: center;
  line-height: 3em;
}

.adminLocationUL {
  margin-bottom: 5%;
}

.adminLocationList {
  background-color: white;
  list-style: none;
  border: 1px solid black;
  font-size: 80%;
}

.adminLocationListRoot {
  background-color: $highlight-color;
  list-style: none;
  border: 1px solid black;
  font-size: 85%;
}

/* LIGHTBOX MODAL */

.backdrop {
  position: absolute;
  top:0; left:0; right:0; bottom:0;
  background: rgba(#000, .5);
  z-index: 9998;
}

.lightboxButtonBlockTop {
  position: relative;
  left: 7px;
  bottom: 10px;
}

.lightboxButtonBlockBottom {
  position: relative;
  left: 7px;
  bottom: 38px;
}

.lightbox-wrapper {
  position: absolute;
  top:0; left:0; right:0; bottom:0;
  background: rgba(#000, .5);
  z-index: 9999;
}

.quick-links-lightbox {
  background: white;
  height: 29em;

  width: 270px;
  padding: 20px;
  position: absolute;
  top:0; left:0; right:0; bottom:0;
  margin: auto;
  background: white;
  color: #444;
  z-index: 9999;

  hr {
    margin: 10px 0;
  }
}

#newItem {
  position: relative;
  bottom: 11px;
}

#quickAdd {
  position: relative;
  left: 65px;
  bottom: 10px;
}

.lightbox a {
  color: black;
}

.close-lightbox:hover {
  cursor: pointer;
}

.nested_elements {
  margin-left: 30px;
}

.lightbox-flash {
  position: absolute;
  top: 0; right: 0; left: 0;
  font-weight: 200;
  text-align: center;
  color: white;
  background: #1E88E5;
  margin: 0;
  height: 25px;
  line-height: 25px
}

.item-name {
  margin-top: 5px;
  font-size: 2em;
}

.circle-metrics {
  height:94px;
  margin: 15px 0;
}

.circle-wrapper {
  width: 50%;
  float: left;

  > p {
    text-align: center;
    font-size: 10px;
    margin-top: 3px;
  }

  .circle {
    height: 65px;
    width: 65px;
    border: 1px solid black;
    border-radius: 50%;
    margin: auto;

    p {
      font-size: 30px;
      line-height: 65px;
      text-align: center;
      font-weight: 100;
    }
  }
}

.quick-links {
  li {
    margin-top: 5px;
    &:last-child {
      margin-top: 25px;
      background: #f1f1f1;
    }
    a {
      display: inline-block;
      width: 100%;
      padding: 10px 10px;
      border: 1px solid #BDBDBD;
      font-size: 13px;
      &:hover {
      }
    }
  }
}

.lightbox-small {
  color: #999;
  font-size: 10px;
  margin-bottom: 0;
}

/* EXPIRATION DATE SELECTOR */

input.datepicker {
  font-size: 30px;
  height: 60px;
  background: white !important;
}

#choose-expiration-wrapper {
  padding-top: 6em;
  width: 80%;
  margin: 0 auto;
  text-align: center;
  button {
    color: black !important;
  }
  input {
    font-size: 1.75em;
    height: 2em;
    background: white;
  }
}

